[package]
name = "temperature-example"
version = "0.1.0"
edition = "2021"

[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
# dependability = {path = "../dependability/dependability", features = ["retry", "runtime"]}
dependability = {git = "https://github.com/MarcelGarus/dependability", features = ["retry", "runtime"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
stm32f4xx-hal = { version = "0.11", features = ["stm32f401", "rt"] }
rtcc = "0.2"
onewire = {git = "https://github.com/kellerkindt/onewire"}
